# Tools

./: .dockerignore  .env.example  .gitattributes  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Fat_loss.ipynb  Interactive_Plots.ipynb  LICENSE  N26_json_vizualizer.ipynb  README.md  TRANSFORMATION_SUMMARY.md  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.html  _not-found.txt  auth.html  auth.txt  backend-deps.txt  backend-metadata.json  cargo-audit.json  codecov.yml  commitlint.config.mjs  docker-compose.deps.yml  docker-compose.prod.yml  docker-compose.yml  env_setup.sh  frontend-deps.json  index.html  index.txt  manual-todo.md  package-lock.json  package.json  pnpm-lock.yaml  research.md  (+2 more)
.next/: trace  (+1 more)
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.test.yml  run_integration_tests.sh  rustfmt.toml
backend/ci/: grcov_coverage.sh
backend/migrations/: 20251022002_create_dice_rolls_table.sql  20251022_create_oauth_accounts_table.sql  20251022_create_users_table.sql  20251025_create_substances_table.sql  20260328001_create_body_measurements_table.sql  20260328002_create_exercises_table.sql  20260328003_create_training_plans_table.sql  20260328004_create_workout_sessions_table.sql
backend/scripts/: backend_checks.sh
backend/src/: app.rs  lib.rs  main.rs
backend/tests/: auth_flow.rs  coverage_baseline.rs  db_integration.rs  http_integration.rs  limiter.rs  migrate_integration.rs  more_unit_coverage.rs  oidc_flow.rs  session_unit.rs  unit_additional.rs
(+345 files in other folders)
