[package]
name = "tools-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "migrate"] }
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
lazy_static = "1.4"
rand = "0.8"
rand_core = "0.6"
openidconnect = "4.0"
oauth2 = "4.0"
base64 = "0.21"
anyhow = "1.0"
rust-embed = "6.4.0"

[dev-dependencies]
axum-test = "14.0"
serial_test = "3.2"
temp-env = "0.3.6"
http = "0.2"
